Swagger Menu, Submenu, Modulos y fix rol
